--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -3,7 +3,7 @@ body    { font: 1em 'Open Sans', sans-serif;
           margin: 0; padding: 0;
           /*background-image: url(../images/straws.png); */}
 a       { /*color: #432165;*/ color: #00997C; }
-a:hover { color: #3b185f; background: #f9f8fa; }
+a:hover { color: #3b185f; background: #fdfdfd; }
 a:visited{ color: #3b185f; }
 
 strong, em  {color: #1177bb; }
@@ -11,7 +11,8 @@ strong, em  {color: #1177bb; }
 /* headlines */
 h1, h2, h3, h4, h5, h6      { /*font-family: 'Vollkorn', 'Georgia', serif;*/
                               font-family: 'Merriweather', serif;
-                              font-weight: normal;}
+                              font-weight: normal;
+                              color: #00997C;}
 h1 a, h2 a, h3 a, h4 a,
 h5 a, h6 a                  { text-decoration: none; }
 h1 a:hover, h2 a:hover,
